apps/zigbee2mqtt/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
  labels:
    app: zigbee2mqtt
spec:
  selector:
    matchLabels:
      app: zigbee2mqtt
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:1.40.1
          resources:
            limits:
              akri.sh/akri-zigbee-usb: "1"
            requests:
              akri.sh/akri-zigbee-usb: "1"
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data
      restartPolicy: Always
