apps/zigbee2mqtt/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
  labels:
    app: zigbee2mqtt
spec:
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: zigbee2mqtt
